# stremio-core-swift

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  build.command  build.rs  buildBridge.command  installDependencies.command
.github/workflows/: release.yml
Sources/StremioCore/: Core.swift  StremioApi+CallbackType.swift  StremioApi.swift  stremio
Sources/StremioCore/stremio/core/models/: addon_details.pb.swift  addons_with_filters.pb.swift  catalog_with_filters.pb.swift  catalogs_with_extra.pb.swift  continue_watching_preview.pb.swift  ctx.pb.swift  library_by_type.pb.swift  library_with_filters.pb.swift  link.pb.swift  loadable.pb.swift  meta_details.pb.swift  player.pb.swift  streaming_server.pb.swift
Sources/StremioCore/stremio/core/runtime/: action.pb.swift  action_catalog_with_filters.pb.swift  action_catalogs_with_extra.pb.swift  action_ctx.pb.swift  action_library_by_type.pb.swift  action_link.pb.swift  action_load.pb.swift  action_meta_details.pb.swift  action_player.pb.swift  action_streaming_server.pb.swift  event.pb.swift  field.pb.swift  runtime.pb.swift
Sources/StremioCore/stremio/core/types/: addon.pb.swift  api.pb.swift  auth_request.pb.swift  library.pb.swift  manifest.pb.swift  meta_item.pb.swift  meta_item_preview.pb.swift  profile.pb.swift  stream.pb.swift  subtitle.pb.swift  video.pb.swift
Sources/Wrapper/include/: wrapper.h
bridge/: StremioCoreWrapper.swift
bridge/StremioCore/: .gitignore  Package.swift
bridge/StremioCore/Sources/StremioCore/: Core.swift  CoreWrapper.swift  StremioApi.swift
src/commonMain/rust/: bridge.rs  lib.rs  model.rs  stremio_core_apple.rs
src/commonMain/rust/bridge/: action.rs  apple_model_field.rs  event.rs  loadable.rs  meta_preview.rs  mod.rs  profile.rs
src/commonMain/rust/env/: env.rs  mod.rs  storage.rs
src/commonMain/rust/model/: fields.rs  model.rs
src/commonMain/rust/model/fields/: addon_detail.rs  library.rs  meta_details.rs
