[package]
name = "stremio-core-swift"
version = "1.2.2"
authors = ["Smart Code OOD"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["staticlib"]
path = "src/commonMain/rust/lib.rs"

[profile.release]
lto = true
opt-level = 3

[dependencies]
stremio-core = { git = "https://github.com/Stremio/stremio-core", rev = "f451b2cb3645c21463c84dd6446b266659c45ded", features = [
    "derive",
    "analytics",
    "env-future-send",
] }

stremio-watched-bitfield = { git = "https://github.com/Stremio/stremio-core", rev = "f451b2cb3645c21463c84dd6446b266659c45ded" }
serde = "1.0.*"
serde_json = "1.0.*"
futures = "0.3.*"
http = "0.2.*"
url = { version = "2.4", features = ["serde"] }
chrono = "0.4.*"
semver = { version = "1", features = ["serde"] }
hex = "0.4.*"
lazy_static = "1.4.*"
boolinator = "2.4.*"
Inflector = "0.11.*"
getrandom = "0.2.*"
cfg-if = "0.1.*"
serde_path_to_error = "0.1.*"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
prost = "0.12"
prost-types = "0.12"
http-cache-reqwest = "0.4.5"
reqwest-middleware = "0.1.6"
once_cell = "1.12.0"

tracing = "0.1"
js-sys = "0.3.*"
objc = "0.2.7"

[build-dependencies]
prost-build = "0.12"
protox = "0.5"
glob = "0.3.0"

# A way to quickly test with local version of `core` crates
# [patch.'https://github.com/Stremio/stremio-core']
# stremio-core = { path = "../stremio-core" }
