[package]
name = "stremio-core-swift"
version = "1.2.4"
authors = ["Smart Code OOD"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["staticlib"]
path = "src/commonMain/rust/lib.rs"

[profile.release]
lto = true
opt-level = 3

[dependencies]
stremio-core = { git = "https://github.com/Stremio/stremio-core", rev = "62657840cb46778ca3c703a6116a988b02664a2c", features = [
    "derive",
    "analytics",
    "env-future-send",
] }

stremio-watched-bitfield = { git = "https://github.com/Stremio/stremio-core", rev = "62657840cb46778ca3c703a6116a988b02664a2c" }
serde = "1.0.*"
serde_json = "1.0.*"
futures = "0.3.*"
http = "0.2.*"
url = { version = "2.4", features = ["serde"] }
chrono = "0.4.*"
semver = { version = "1", features = ["serde"] }
hex = "0.4.*"
lazy_static = "1.4.*"
enclose = "1.1.*"
boolinator = "2.4.*"
Inflector = "0.11.*"
getrandom = "0.2.*"
cfg-if = "0.1.*"
serde_path_to_error = "0.1.*"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
prost = "0.12"
prost-types = "0.12"
http-cache-reqwest = "0.4.5"
reqwest-middleware = "0.1.6"
once_cell = "1.12.0"
tracing = "0.1"
js-sys = "0.3.*"

objc2-foundation = { version = "0.2.2", features = [
    "NSString",
    "NSData",
    "NSUserDefaults",
    "NSURLRequest",
    "NSURLResponse",
    "NSURLSession",
    "NSURL",
    "NSError",
    "block2",
] }
objc2 = "*"
dispatch = "0.2.0"
block2 = "0.5.1"

[build-dependencies]
prost-build = "0.12"
protox = "0.5"
glob = "0.3.0"

# A way to quickly test with local version of `core` crates
# [patch.'https://github.com/Stremio/stremio-core']
# stremio-core = { path = "../stremio-core" }
